Added style, food lists

--- a/index.html
+++ b/index.html
@@ -4,23 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" >
     <title>Culinary Chronicles </title>
 </head>
 <body>
     <h1>Culinary Chronicles: Showcasing the Best Food in the World</h1>
-    <h3>A website by: PARTNER 1 & PARTNER 2</h3>
+    <h3>A website by: Evan Holloway & Evie Cutrell & Zach Harris</h3>
 
+    <h3><strong>These are My favorite cuisines!</strong></h3>
     <!-- Create a list of your favorite cuisines and pictures -->
-
+    <ol>
+        <img src="ChineseCuisine.jpeg" alt="Chinese dishes" width = "250" height = "250" >
+        <li>Chinese Food</li>
+        <li>Mexican Food</li>
+        <li>Indian Food</li>
+    </ol>
 
 
     <!-- Create a list of your favorite dishes with pictures -->
-
+    <ul>
+        <li>Tongue Tacos</li>
+        <li>General Tso's Chicken</li>
+        <img src="YellowCurry.jpeg" alt="Some Yellow Curry" width = "250" height = "250">
+        <li>Yellow Curry Chicken</li>
+    </ul>
 
 
 
     <!-- Create a list of recipes with links to sites that provide the recipe -->
-
+    
 
 
 
