Updated index with more recipes, started stylesheet

--- a/index.html
+++ b/index.html
@@ -13,25 +13,37 @@
 
     <h3><strong>These are My favorite cuisines!</strong></h3>
     <!-- Create a list of your favorite cuisines and pictures -->
+    <div class = "cuisines">
     <ol>
-        <img src="ChineseCuisine.jpeg" alt="Chinese dishes" width = "250" height = "250" >
+
         <li>Chinese Food</li>
         <li>Mexican Food</li>
         <li>Indian Food</li>
+        <li>Asian Food</li>
+        <img src="ChineseCuisine.jpeg" alt="Chinese dishes" width = "250" height = "250" >
+        <img src="ramen.jpg" alt="Bowl of ramen" width = "250" height = "250">
     </ol>
+    </div>
 
 
     <!-- Create a list of your favorite dishes with pictures -->
     <ul>
         <li>Tongue Tacos</li>
         <li>General Tso's Chicken</li>
-        <img src="YellowCurry.jpeg" alt="Some Yellow Curry" width = "250" height = "250">
         <li>Yellow Curry Chicken</li>
+        <li>Sushi</li>
+        <li>Garlic Steak</li>
+        <img src="YellowCurry.jpeg" alt="Some Yellow Curry" width = "250" height = "250">
+        <img src="sushi.jpg" alt="sushi roll" width="250" height="250">
+        <img src="steak.jpg" alt="pan-seared steak" width="250" height="250">
     </ul>
 
 
 
     <!-- Create a list of recipes with links to sites that provide the recipe -->
+    <a href="https://www.fifteenspatulas.com/homemade-sushi/">Learn how to make handmade sushi rolls here!</a><br>
+    <a href="https://pinchofyum.com/quick-homemade-ramen">Click here for the bowl of ramen recipe!</a><br>
+    <a href="https://gimmedelicious.com/pan-seared-steak-with-garlic-butter/">Get the grill ready for this steak recipe!</a>
     
 
 
