flexbox, and centerd

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Culinary Chronicles: Showcasing the Best Food in the World</h1>
-    <h3>A website by: Evan Holloway & Evie Cutrell & Zach Harris</h3>
+    <h3 id="subtitle">A website by: Evan Holloway & Evie Cutrell & Zach Harris</h3>
 
     <h3><strong>These are My favorite cuisines!</strong></h3>
     <!-- Create a list of your favorite cuisines and pictures -->
@@ -20,9 +20,13 @@
         <li>Mexican Food</li>
         <li>Indian Food</li>
         <li>Asian Food</li>
-        <img src="ChineseCuisine.jpeg" alt="Chinese dishes" width = "250" height = "250" >
-        <img src="ramen.jpg" alt="Bowl of ramen" width = "250" height = "250">
     </ol>
+    <div class="food">
+        <div class="flexChild"><img src="ChineseCuisine.jpeg" alt="Chinese dishes" width = "250" height = "250" ></div>
+        <div class="flexChild"><img src="ramen.jpg" alt="Bowl of ramen" width = "250" height = "250"></div>
+    </div>
+    
+
     </div>
 
 
@@ -33,11 +37,14 @@
         <li>Yellow Curry Chicken</li>
         <li>Sushi</li>
         <li>Garlic Steak</li>
-        <img src="YellowCurry.jpeg" alt="Some Yellow Curry" width = "250" height = "250">
-        <img src="sushi.jpg" alt="sushi roll" width="250" height="250">
-        <img src="steak.jpg" alt="pan-seared steak" width="250" height="250">
+        
     </ul>
 
+    <div class="food">
+        <img class="flexChild" src="YellowCurry.jpeg" alt="Some Yellow Curry" width = "250" height = "250">
+        <img class="flexChild" src="sushi.jpg" alt="sushi roll" width="250" height="250">
+        <img class="flexChild" src="steak.jpg" alt="pan-seared steak" width="250" height="250">
+    </div>
 
 
     <!-- Create a list of recipes with links to sites that provide the recipe -->
